--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "test": "jest"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@parcel/transformer-sass": "2.8.3",
     "@types/animejs": "^3.1.7",
+    "@types/jest": "^29.5.0",
     "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "parcel": "^2.8.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.3"
   },
   "dependencies": {
     "animejs": "^3.2.1",
